[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Themes/Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Fonts/coolvetica.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/LEMONMILK.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Themes/Menu.tres" type="Theme" id=4]
[ext_resource path="res://Scenes/UI/Leaderboard.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/UI/Lose.gd" type="Script" id=6]
[ext_resource path="res://Assets/Themes/FontSmall-Medium.tres" type="DynamicFont" id=7]

[sub_resource type="DynamicFont" id=5]
size = 40
extra_spacing_char = 3
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 30
font_data = ExtResource( 3 )

[node name="Lose" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screen" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 600 )
color = Color( 0.419608, 0.419608, 0.419608, 0.247059 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausePanel" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -337.5
margin_top = -262.5
margin_right = 337.5
margin_bottom = 262.5
rect_min_size = Vector2( 675, 525 )
color = Color( 0, 0, 0, 0.792157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PausePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel/CenterContainer"]
margin_left = 77.0
margin_top = 23.0
margin_right = 598.0
margin_bottom = 501.0
theme = ExtResource( 4 )
custom_constants/separation = 10

[node name="You lose" type="Label" parent="PausePanel/CenterContainer/VBoxContainer"]
margin_right = 521.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = ExtResource( 1 )
text = "You lose..."
align = 1
valign = 1

[node name="Control" type="Control" parent="PausePanel/CenterContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 521.0
margin_bottom = 106.0

[node name="Score" type="RichTextLabel" parent="PausePanel/CenterContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 521.0
margin_bottom = 166.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true

[node name="Control2" type="Control" parent="PausePanel/CenterContainer/VBoxContainer"]
visible = false
margin_top = 176.0
margin_right = 521.0
margin_bottom = 176.0

[node name="HBoxContainer" type="HBoxContainer" parent="PausePanel/CenterContainer/VBoxContainer"]
margin_top = 176.0
margin_right = 521.0
margin_bottom = 225.0

[node name="Space" type="Control" parent="PausePanel/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 35.0
margin_bottom = 49.0
rect_min_size = Vector2( 35, 0 )

[node name="Label" type="Label" parent="PausePanel/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 39.0
margin_top = 4.0
margin_right = 139.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 11 )
text = "Name:"

[node name="Space2" type="Control" parent="PausePanel/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 143.0
margin_right = 178.0
margin_bottom = 49.0
rect_min_size = Vector2( 35, 0 )

[node name="Name" type="LineEdit" parent="PausePanel/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 182.0
margin_right = 482.0
margin_bottom = 49.0
rect_min_size = Vector2( 300, 0 )
custom_fonts/font = ExtResource( 7 )
align = 1
max_length = 16
expand_to_text_length = true
clear_button_enabled = true
placeholder_text = "*enter name here*"

[node name="Space3" type="Control" parent="PausePanel/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 486.0
margin_right = 521.0
margin_bottom = 49.0
rect_min_size = Vector2( 35, 0 )

[node name="SubmitScore" type="Button" parent="PausePanel/CenterContainer/VBoxContainer"]
use_parent_material = true
margin_top = 235.0
margin_right = 521.0
margin_bottom = 285.0
rect_min_size = Vector2( 0, 50 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 0.576471 )
custom_colors/font_color_hover = Color( 1, 0.756863, 0.384314, 1 )
text = "Submit Score to Leaderboard"

[node name="ViewLeaderboard" type="Button" parent="PausePanel/CenterContainer/VBoxContainer"]
margin_top = 295.0
margin_right = 521.0
margin_bottom = 338.0
text = "View Leaderboard"

[node name="Space" type="Control" parent="PausePanel/CenterContainer/VBoxContainer"]
margin_top = 348.0
margin_right = 521.0
margin_bottom = 358.0
rect_min_size = Vector2( 35, 10 )

[node name="Restart" type="Button" parent="PausePanel/CenterContainer/VBoxContainer"]
use_parent_material = true
margin_top = 368.0
margin_right = 521.0
margin_bottom = 418.0
rect_min_size = Vector2( 0, 50 )
text = "Restart"

[node name="MainMenu" type="Button" parent="PausePanel/CenterContainer/VBoxContainer"]
use_parent_material = true
margin_top = 428.0
margin_right = 521.0
margin_bottom = 478.0
rect_min_size = Vector2( 0, 50 )
text = "Go to Main Menu"

[node name="Quit" type="Button" parent="PausePanel/CenterContainer/VBoxContainer"]
visible = false
use_parent_material = true
margin_top = 458.0
margin_right = 521.0
margin_bottom = 508.0
rect_min_size = Vector2( 0, 50 )
text = "Quit"

[node name="Leaderboard" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="text_changed" from="PausePanel/CenterContainer/VBoxContainer/HBoxContainer/Name" to="Leaderboard" method="_on_Name_text_changed"]
[connection signal="pressed" from="PausePanel/CenterContainer/VBoxContainer/SubmitScore" to="." method="_on_SubmitScore_pressed"]
[connection signal="pressed" from="PausePanel/CenterContainer/VBoxContainer/ViewLeaderboard" to="Leaderboard" method="_on_ViewLeaderboard_pressed"]
